# zkp-rs

./: .gitignore  .gitmodules  CIRCUIT_DESIGN.md  Cargo.toml  todo.md
.serena/: project.yml
examples/: mock_demo.rs  stark_proof_demo.rs  substring_proof.rs
src/: config.rs  error.rs  lib.rs
src/backend/: mock.rs  mod.rs  sha256_commit.rs  stark_prover.rs
src/circuits/: air.rs  mod.rs  substring_circuit.rs  trace.rs
src/core/: traits.rs  types.rs
src/hash/: sha256.rs
